--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,13 @@ svg {
     margin-right: auto;
     display: block;
 }
+
+.counties {
+	fill: none;
+}
+
+.states {
+	fill: none;
+	stroke: #fff;
+	stroke-linejoin: round;
+}
